GNOME Bugzilla – Bug 680278
[0.11] qtdemux: push mode seeking does not work
Last modified: 2012-07-20 11:38:33 UTC
-base/tests/examples/playback $ ./playback-test 0 pushfile:///foo.m4a Just doesn't work at all, time resets to 0 or nonsensical huge value, streaming stops. Same for 3gp/mp4.
This should take care of it: commit 7247d136e5068e867171fc82b2bee74fd5e8197e Author: Mark Nauwelaerts <mark.nauwelaerts@collabora.co.uk> Date: Fri Jul 20 13:35:29 2012 +0200 qtdemux: properly transform incoming segment event ... which is really useful for proper push mode seeking. Fixes https://bugzilla.gnome.org/show_bug.cgi?id=680278