qtdemux: properly transform incoming segment event

... which is really useful for proper push mode seeking.

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=680278